# git-meta

./: .gitignore  .travis.yml  LICENCE.txt  README.md  README.rst  environment.yml  gitmeta.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
docs/: Makefile  make.bat
docs/source/: conf.py  git.meta.rst  git.rst  index.rst  modules.rst
gitmeta/: meta.py
src/git/meta/: meta.py
tests/: test_meta.py
