[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-meta"
dynamic = ["version"]
authors = [
  { name="Jules David", email="jules@onada.fr" },
  { name="Tristan Gregoire", email="tristan@onada.fr" },
]
description = "Git repository manager"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "gitpython",
    "docopt",
    "appdirs",
    "rich",
]

[project.urls]
Homepage = "https://codeberg.org/galactics/git-meta"
Documentation = "https://git-meta.readthedocs.io"
Repository = "https://codeberg.org/galactics/git-meta"
Issues = "https://codeberg.org/galactics/git-meta/issues"

[project.optional-dependencies]
dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "tox",
]
tests = [
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
path = "gitmeta.py"

[tool.hatch.build.targets.wheel]
packages = ["gitmeta.py"]

[tool.pytest.ini_options]
addopts = "-v --cov gitmeta --cov-report html --doctest-modules gitmeta.py tests/"
