[metadata]
name = git-meta
version = attr:gitmeta.__version__
description = Git repository manager
long_description = file: README.rst
keywords = git
author = Jules DAVID
author_email = jules@onada.fr
url = https://github.com/galactics/git-meta
licence = BSD

[options]
py_modules = gitmeta,
include_package_data = True
zip_safe = False
setup_requires =
    pygit2>=0.27
install_requires =
    docopt

[options.extras_require]
tests =
    flake8
    pytest
    pytest-cov
dev =
    Sphinx
    sphinxcontrib-napoleon

[options.entry_points]
console_scripts =
    git-meta = gitmeta:main

[flake8]
max-line-length = 100
max-complexity = 20
doctests = 1

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -v --cov gitmeta --cov-report html --doctest-modules gitmeta.py tests/
