[metadata]
name = git-meta
version = 0.2.2
description = Git repository manager
long_description = file: README.rst
keywords = git
author = Jules DAVID
author_email = jules@onada.fr
url = https://github.com/galactics/git-meta
licence = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Version Control :: Git

[options]
py_modules = gitmeta,
include_package_data = True
zip_safe = False
install_requires =
    gitpython
    docopt
    appdirs
    rich

[options.extras_require]
tests =
    flake8
    pytest
    pytest-cov
dev =
    Sphinx
    tox

[options.entry_points]
console_scripts =
    git-meta = gitmeta:main

[flake8]
max-line-length = 100
max-complexity = 20
doctests = 1

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -v --cov gitmeta --cov-report html --doctest-modules gitmeta.py tests/
